--- a/portfolio/Dockerfile
+++ b/portfolio/Dockerfile
@@ -4,7 +4,7 @@ RUN rm -rf /etc/nginx/conf.d
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
-COPY dist/ /usr/share/nginx/html
+COPY build/ /usr/share/nginx/html
 
 EXPOSE 80
 
